- GPR#277: Switch the following externals to [@@unboxed]:
  * {Nativeint,Int32,Int64}.{of,to}_float
  * Int{32,64}.float_of_bits
  * Int{32,64}.bits_of_float
  (Jérémie Dimino)
- GPR#281: Switch the following externals to [@@unboxed]:
  * Sys.time (and [@@noalloc])
  * Pervasives.ldexp (and [@@noalloc])
  * Pervasives.compare for float, nativeint, int32, int64.
  (Bobot François)
- GPR#329: Add exist and for_all function in Array
  (Bernhard Schommer)

Type system:
- PR#5545: Type annotations on methods cannot control the choice of abbreviation
* PR#6465: allow incremental weakening of module aliases (Jacques Garrigue).
  This is done by adding equations to submodules when expanding aliases.
  In theory this may be incompatible is some corner cases defining a module
  type through inference, but no breakage known on published code.
- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Toplevel and debugger:
- PR#6396: Warnings-as-errors not properly flushed in the toplevel
  (Alain Frisch)
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (whitequark and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)
- PR#6935, GPR#298: crash in debugger when load_printer is given a directory
  (Junsong Li, review by Gabriel Scherer)
- PR#6401: use proper error reporting for toplevel's environment
  initialization (Gabriel Scherer)

Other libraries:
- PR#4023 and GPR#68: add Unix.sleepf (sleep with sub-second resolution)
  (Evgenii Lepikhin and Xavier Leroy)
* Protect Unix.sleep against interruptions by handled signals.
  Before, a handled signal could cause Unix.sleep to return early.
  Now, the sleep is restarted until the given time is elapsed.
  (Xavier Leroy)
- PR#6896: serious reimplementation of Big_int.float_of_big_int and
  Ratio.float_of_ratio, ensuring that the result is correctly rounded.
  (Xavier Leroy)
- PR#7013: spurious wake-up in the Event module
  (Xavier Leroy)