@@ -161,9 +161,33 @@ val exists : f:('a -> bool) -> 'a array -> bool
     [(p a1) || (p a2) || ... || (p an)]. *)
 
 val for_all : f:('a -> bool) -> 'a array -> bool
-(** [Array.for_all p [|a1; ...; an|]] checks if all elements of the array
+(** [ArrayLabels.for_all p [|a1; ...; an|]] checks if all elements of the array
    satisfy the predicate [p]. That is, it returns
    [(p a1) && (p a2) && ... && (p an)]. *)
+
+val for_all2 : f:('a -> 'b -> bool) -> 'a array -> 'b array -> bool
+(** Same as {!ArrayLabels.for_all}, but for a two-argument predicate.
+   Raise [Invalid_argument] if the two arrays are determined
+   to have different lengths. *)
+
+val exists2 : f:('a -> 'b -> bool) -> 'a array -> 'b array -> bool
+(** Same as {!ArrayLabels.exists}, but for a two-argument predicate.
+   Raise [Invalid_argument] if the two arrays are determined
+   to have different lengths. *)
+
+val mem : 'a -> set:'a array -> bool
+(** [mem a l] is true if and only if [a] is equal
+   to an element of [l]. *)
+
+val memq : 'a -> set:'a array -> bool
+(** Same as {!ArrayLabels.mem}, but uses physical equality instead of structural
+   equality to compare list elements. *)
+
+val find : f:('a -> bool) -> 'a array -> 'a
+(** [find p l] returns the first element of the array [l]
+   that satisfies the predicate [p].
+   Raise [Not_found] if there is no value that satisfies [p] in the
+   array [l]. *)
 
 external create_float: int -> float array = "caml_make_float_vect"
 (** [ArrayLabels.create_float n] returns a fresh float array of length [n],
